--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,198 @@
+/*FORMATAÇÕES PADRÕES*/
+
+* {
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    font-size: 16px;
+    font-family: "Trebuchet MS", Arial, sans-serif;
+    background: #e6e6e6;
+}
+
+/*ESTILOS HEADER*/
+
+.cabecalho {
+    background-color: #f7b600;
+    padding: 20px;
+    text-align: center;
+}
+
+.area-logo {
+    padding: 10px;
+    font-size: 3.5em;
+    font-weight: 900;
+    color: #fff;
+}
+span {
+    color: black;
+}
+
+.area-menu {
+    padding: 20px;
+}
+
+.area-menu a:link, .area-menu a:visited {
+    color: white;
+    padding: 8px 12px;
+}
+
+.area-menu a:hover {
+    color: #f7b600;
+    background: #ffffff;
+    border-radius: 40px;
+    transform: scale(1.05);
+}
+
+.area-menu a {
+    text-decoration: none;
+    transition: 0.8s;
+}
+
+/*ESTILOS GERAIS AREA PRINCIPAL*/
+.area-principal {
+    width: 920px;
+    margin: 0 auto;
+    padding: 15px;
+}
+
+
+/*ESTILOS AREA POSTAGENS*/
+.area-postagens {
+    width: 660px;
+    float: left;
+}
+
+.postagem {
+    padding: 20px;
+    margin-bottom: 20px;
+    background: #fff;
+}
+
+h2 {
+    color: #f7b600;
+    font-size: 1.8em;
+}
+
+.data-postagem {
+    font-size: 1.1em;
+    font-weight: 500;
+    border-bottom: 2px solid #27262634;
+    padding-bottom: 10px;
+    margin-bottom: 10px;
+    display: block;
+}
+
+img {
+    width: 620px;
+    border-radius: 20px;
+    border: 2px solid #f7b600;
+}
+
+.postagem a:link, .postagem a:visited {
+    color: blue;
+}
+
+.postagem a:hover {
+    color: #f7b600;
+    transform: scale(1.05);
+}
+
+.postagem a {
+    text-decoration: none;
+    transition: 0.8s;
+}
+
+
+/*ESTILOS AREA LATERAL*/
+.area-lateral {
+    width: 240px;
+    float: right;
+}
+
+.conteudo-lateral {
+    background: white;
+    padding: 15px;
+    margin-bottom: 15px;
+}
+
+.postagem-lateral {
+    font-size: 0.8em;
+    padding: 8px;
+    border-bottom: 1px solid #27262634;
+}
+
+h3 {
+    color: #fff;
+    background: #f7b600;
+    border-radius: 20px;
+    padding: 5px;
+}
+
+.redes-lateral {
+    width: 240px;
+    float: right;
+}
+
+.redes-sociais {
+    background: white;
+    padding: 10px 30px;
+    text-align: center;
+    
+}
+
+a {
+    text-decoration: none;
+    padding: 7px;
+}
+
+.redes-sociais a button {
+    background: #f7b600;
+    border: none;
+    padding: 0 auto;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    cursor: pointer;
+    transition: .2s;
+}
+
+.redes-sociais a button:hover {
+    transform: scale(1.08);
+}
+
+.redes-sociais a button i {
+    font-size: 1.5em;
+    cursor: pointer;
+    padding: 0 auto;
+    border-radius: 20px;
+    transition: .2s;
+}
+
+
+/*ESTILO LISTA PAGINA SOBRE NOS*/
+
+ul {
+    padding: 0 20px;
+}
+
+
+
+/*ESTILOS RODAPE*/
+.rodape {
+    background-color: #f7b600;
+    padding: 20px;
+    text-align: center;
+    clear: both;
+    font-weight: 500;
+}
+
+.rodape span {
+    font-weight: 500;
+}
+
+
+
+
 
