--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@ body {
     font-size: 16px;
     font-family: "Trebuchet MS", Arial, sans-serif;
     background: rgb(53,60,232);
+    height: 100%;
     background: linear-gradient(180deg, rgba(53,60,232,1) 0%, rgba(158,29,253,1) 30%, rgba(228,231,2,1) 100%);
 }
 
