--- a/css/style.css
+++ b/css/style.css
@@ -187,7 +187,7 @@ ul {
 /*ESTILOS RODAPE*/
 .rodape {
     width: 100%;
-    background-color: #D5D5D5;
+    background-color: #f7b600;
     padding: 20px;
     text-align: center;
     display: flex;
