--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 
 body {
     font-size: 16px;
-    font-family: "Trebuchet MS", Arial, sans-serif;
+    font-family: 'Poppins', sans-serif;
     background: #D5D5D5
 }
 
